# rusthing

./: .gitignore  Cargo.toml  README.md  something.parquet
.github/agents/: coach.agent.md
src/: api.rs  lib.rs  main.rs
