[package]
name = "rusthing"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.1.0"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
datafusion = "53.0.0"
parquet = "58.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
